сделать форму и попап

--- a/style/index.css
+++ b/style/index.css
@@ -6,3 +6,6 @@
 @import url('../blocks/profile/profile.css');
 @import url('../blocks/grid-cards/grid-cards.css');
 @import url('../blocks/footer/footer.css');
+@import url('../blocks/form/form.css');
+@import url('../blocks/popup/popup.css');
+@import url('../blocks/popup/_open/popup_open.css')
