--- a/style/index.css
+++ b/style/index.css
@@ -8,4 +8,4 @@
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/form/form.css');
 @import url('../blocks/popup/popup.css');
-@import url('../blocks/popup/_open/popup_open.css')
+@import url('../blocks/popup/_open/popup_open.css');
