сделать корректный путь к изображениею

--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -5,7 +5,7 @@
     background: transparent;
     border: 2px solid #fff;
     outline: none;
-    background-image: url("./image/cross.svg");
+    background-image: url("../../../image/cross.svg");
     background-position: center;
     background-repeat: no-repeat;
 }
