--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -5,7 +5,7 @@
     padding: 0;
     vertical-align: middle;
     background: transparent;
-    background-image: url("./image/edit_buton.svg");
+    background-image: url("../../../image/edit_buton.svg");
     background-size: contain;
     background-position: center;
     border: none;
