--- a/blocks/form/__close-button/form__close-button.css
+++ b/blocks/form/__close-button/form__close-button.css
@@ -5,7 +5,7 @@
     background: transparent;
     border: none;
     outline: none;
-    background-image: url("/image/Close\ Icon.svg");
+    background-image: url("../../../image/Close\ Icon.svg");
     background-size: cover;
     background-position: center;
     position: absolute;
