--- a/blocks/header/__line/header__line.css
+++ b/blocks/header/__line/header__line.css
@@ -8,8 +8,6 @@
 @media screen and (max-width: 767px) {
 .header__line {
     max-width: 100%;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
+    margin: 0;
     }
 }
