--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,11 +3,11 @@
     margin: 45px 0 0 35px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) { 
 .header__logo {
     width: 104px;
-    padding-top: 8%;
-    padding-bottom: 10%;
-    margin-top: 0;
+    margin-bottom: 32px;
+    margin-top: 28px;
+    margin-left: 27px;
     }
-}
+} 
