--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -1,19 +1,21 @@
 .profile__button-edit {
-    width: 24px;
-    height: 24px;
-    margin-top: 6px;
-    padding: 0;
-    vertical-align: middle;
-    background: transparent;
-    background-image: url("../../../image/edit_buton.svg");
-    background-size: contain;
-    background-position: center;
-    border: none;
-    outline: none;
+  width: 24px;
+  height: 24px;
+  margin-top: 6px;
+  padding: 0;
+  vertical-align: middle;
+  background: transparent;
+  background-image: url("../../../image/Rectangle.svg"),
+    url("../../../image/edit_buton.svg");
+
+  background-size: contain;
+  background-position: center;
+  border: none;
+  outline: none;
 }
 
 .profile__button-edit:hover {
-    opacity: .6;
-    cursor: pointer;
-    transition: opacity 0.2s linear;
+  opacity: 0.6;
+  cursor: pointer;
+  transition: opacity 0.2s linear;
 }
