--- a/blocks/form/__submit/form__submit.css
+++ b/blocks/form/__submit/form__submit.css
@@ -4,10 +4,15 @@
     border-radius: 2px;
     border: none;
     background-color: #000;
-    font-family: 'Inter', Arial, sans-serif;
     font-size: 18px;
     font-weight: normal;
     line-height: 1;
     color: #fff;
     text-align: center;
+}
+
+.form__submit:hover {
+    opacity: .6;
+    cursor: pointer;
+    transition: opacity 0.2s linear;
 }
