--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,6 +1,6 @@
 .profile__button-add {
-    width: 22px;
-    height: 22px;
+    width: 150px;
+    height: 50px;
     padding: 25px 75px;
     background: transparent;
     border: 2px solid #fff;
@@ -10,14 +10,17 @@
     background-repeat: no-repeat;
 }
 
+
 .profile__button-add:hover {
     opacity: .6;
     transition: opacity 0.2s linear;
+    cursor: pointer;
 }
+
 
 @media screen and (max-width: 767px) {
 .profile__button-add {
     width: 282px;
-        }
     }
+}
     
