--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -1,21 +1,28 @@
 .profile__button-edit {
   width: 24px;
   height: 24px;
-  margin-top: 6px;
   padding: 0;
   vertical-align: middle;
   background: transparent;
   background-image: url("../../../image/Rectangle.svg"),
     url("../../../image/edit_buton.svg");
-
   background-size: contain;
   background-position: center;
   border: none;
   outline: none;
 }
 
+
 .profile__button-edit:hover {
-  opacity: 0.6;
-  cursor: pointer;
+  opacity: 0.5;
   transition: opacity 0.2s linear;
+  cursor: pointer;
+}
+
+
+@media screen and (max-width: 767px) {
+.profile__button-edit {
+  width: 16px;
+  height: 16px;
+  }
 }
