--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -16,8 +16,10 @@
     padding-bottom: 46px;
 }
 
+
 @media screen and (max-width: 767px) {
 .profile {
     flex-direction: column;
+    padding-bottom: 37px;
     }
 }
