--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -21,6 +21,7 @@
 
 @media screen and (max-width: 768px) {
 .form {
+    max-width: 380px;
     margin-left: 23px;
     margin-right: 23px;
     padding: 24px 15px 35px;
