--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,6 +7,7 @@
 
 @media screen and (max-width: 767px) {
 .footer__copyright {
-    max-width: 50%;
+    font-size: 14px;
+    line-height: 17px;
     }
 }
