поправить отступы.поправить форму. удалить шрифты

--- a/blocks/grid-card/__item/grid-card__item.css
+++ b/blocks/grid-card/__item/grid-card__item.css
@@ -1,4 +1,6 @@
 .grid-card__item {
-    width: 100%;
     min-height: 361px;
+    width: 100%;
+    background: #FFFFFF;
+    border-radius: 10px;
 }
