--- a/style/index.css
+++ b/style/index.css
@@ -2,10 +2,25 @@
 @import url('../vendor/fonts/inter.css');
 @import url('../blocks/page/page.css');
 @import url('../blocks/header/header.css');
+@import url('../blocks/header/__logo/header__logo.css');
 @import url('../blocks/content/content.css');
 @import url('../blocks/profile/profile.css');
 @import url('../blocks/grid-card/grid-card.css');
+@import url("../blocks/grid-card/__item/grid-card__item.css");
+@import url("../blocks/grid-card/__img/grid-card__img.css");
+@import url("../blocks/grid-card/__text/grid-card__text.css");
+@import url("../blocks/grid-card/__like/grid-card__like.css");
+@import url("../blocks/grid-card/__wrapper/grid-card__wrapper.css");
 @import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__copyright/footer__copyright.css');
 @import url('../blocks/form/form.css');
+@import url('../blocks/form/__contact-info/form__contact-info.css');
+@import url('../blocks/form/__contact-name/form__contact-name.css');
+@import url('../blocks/form/__title/form__title.css');
+@import url('../blocks/form/__contact-intrest/form__contact-interst.css');
+@import url('../blocks/form/__submit/form__submit.css');
+@import url('../blocks/form/__close-button/form__close-button.css');
+@import url('../blocks/form/__wrap/form__wrap.css');
 @import url('../blocks/popup/popup.css');
 @import url('../blocks/popup/_open/popup_open.css');
+@import url('../blocks/popup/__container/popup__container.css');
