--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,14 +1,13 @@
 .content {
     max-width: 950px;
     min-width: 300px;
-    margin: 0 auto;
-    padding: 45px 30px 60px;
     box-sizing: border-box;
+    padding: 40px 0 66px;
 }
 
 @media screen and (max-width: 767px) {
 .content {
-    padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 0px;
     }
 }
