--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,29 +1,10 @@
-@import url('./__contact-info/form__contact-info.css');
-@import url('./__contact-name/form__contact-name.css');
-@import url('./__title/form__title.css');
-@import url('./__contact-intrest/form__contact-interst.css');
-@import url('./__submit/form__submit.css');
-@import url('./__close-button/form__close-button.css');
-@import url('./__wrap/form__wrap.css');
-
-
 .form {
-    width: 430px;
-    min-height: 330px;
-    padding: 34px 36px 55px;
-    box-sizing: border-box;
-    border-radius: 10px;
-    background-color: #fff;
-    position: relative;
-    margin-top: 25px;
     display: flex;
+    flex-direction: column;
+    padding-top: 5%;
 }
 
 @media screen and (max-width: 768px) {
 .form {
-    max-width: 380px;
-    margin-left: 23px;
-    margin-right: 23px;
-    padding: 24px 15px 35px;
-    }
+}
 }
