--- a/blocks/grid-card/__like/grid-card__like.css
+++ b/blocks/grid-card/__like/grid-card__like.css
@@ -1,3 +1,15 @@
 .grid-card__like {
-    margin-right: 15px;
+    background-image: url("../../../image/like.svg");
+    background-color: transparent;
+    width: 21px;
+    height: 19px;
+    margin-right: 19px;
+    border: none;
+    outline: none;
+}
+
+.grid-card__like:hover {
+    opacity: .6;
+    transition: opacity 0.2s linear;
+    cursor: pointer;
 }
