--- a/blocks/grid-card/grid-card.css
+++ b/blocks/grid-card/grid-card.css
@@ -1,16 +1,10 @@
-@import url("./__item/grid-card__item.css");
-@import url("./__img/grid-card__img.css");
-@import url("./__background/grid-card__background.css");
-@import url("./__text/grid-card__text.css");
-@import url("./__like/grid-card__like.css");
-@import url("./__wrapper/grid-card__wrapper.css");
-
 .grid-card {
-  width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   grid-gap: 21px 18px;
-  padding-bottom: 70px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 @media screen and (max-width: 767px) {
