--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,10 @@
-@import url('../header/__logo/header__logo.css');
-@import url('../header/__line/header__line.css');
-
 .header {
-    max-width: 100%;
+    border-bottom: 1px solid #545454;
+    padding-bottom: 4%;
 }
+
+@media screen and (max-width: 767px) { 
+.header {
+    padding-bottom: 0;
+    }
+} 
