--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,7 @@
     max-width: 942px;
     min-width: 300px;
     margin: 0 auto;
+    padding: 45px 30px 60px;
     box-sizing: border-box;
     background: #000000;
     font-family: 'Inter', Arial, sans-serif;
@@ -12,3 +13,9 @@
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
 }
+
+@media screen and (max-width: 767px) { 
+.page {
+    padding: 28px 19px 36px;
+    }
+} 
