--- a/blocks/profile/__interst/profile__interst.css
+++ b/blocks/profile/__interst/profile__interst.css
@@ -15,8 +15,6 @@
     font-size: 14px;
     line-height: 17px;
     text-align: center;
-    margin-right: 32px;
-    margin-top: 0;
-    margin-bottom: 10%;
+    margin: 0 0 16% ;
     }
 }
