--- a/style/index.css
+++ b/style/index.css
@@ -5,6 +5,13 @@
 @import url('../blocks/header/__logo/header__logo.css');
 @import url('../blocks/content/content.css');
 @import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__wrapper/profile__wrapper.css');
+@import url('../blocks/profile/__avatar/profile__avatar.css');
+@import url('../blocks/profile/__form/profile__form.css');
+@import url('../blocks/profile/__name/profile__name.css');
+@import url('../blocks/profile/__interst/profile__interst.css');
+@import url('../blocks/profile/__button-add/profile__button-add.css');
+@import url('../blocks/profile/__button-edit/profile__button-edit.css');
 @import url('../blocks/grid-card/grid-card.css');
 @import url("../blocks/grid-card/__item/grid-card__item.css");
 @import url("../blocks/grid-card/__img/grid-card__img.css");
