--- a/style/index.css
+++ b/style/index.css
@@ -14,13 +14,16 @@
 @import url('../blocks/profile/__button-edit/profile__button-edit.css');
 @import url('../blocks/grid-card/grid-card.css');
 @import url("../blocks/grid-card/__item/grid-card__item.css");
+@import url("../blocks/grid-card/__del/grid-card__del.css");
 @import url("../blocks/grid-card/__img/grid-card__img.css");
 @import url("../blocks/grid-card/__text/grid-card__text.css");
 @import url("../blocks/grid-card/__like/grid-card__like.css");
+@import url("../blocks/grid-card/__like/_active/grid-card__like_active.css");
 @import url("../blocks/grid-card/__wrapper/grid-card__wrapper.css");
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
 @import url('../blocks/form/form.css');
+@import url('../blocks/form/__add-img/form__add-img.css');
 @import url('../blocks/form/__contact-info/form__contact-info.css');
 @import url('../blocks/form/__contact-name/form__contact-name.css');
 @import url('../blocks/form/__title/form__title.css');
@@ -29,5 +32,14 @@
 @import url('../blocks/form/__close-button/form__close-button.css');
 @import url('../blocks/form/__wrap/form__wrap.css');
 @import url('../blocks/popup/popup.css');
+@import url('../blocks/popup/_add/popup_add.css');
 @import url('../blocks/popup/_open/popup_open.css');
 @import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/__container/_background/popup__container_background.css');
+@import url('../blocks/form/__item-name/form__item-name.css');
+@import url('../blocks/form/__link-img/form__link-img.css');
+@import url('../blocks/form/__new-item/form__new-item.css');
+@import url('../blocks/popup/__container-add-img/popup__container-add-img.css');
+@import url('../blocks/popup/__add-img/popup__add-img.css');
+@import url('../blocks/popup/__img-big/popup__img-big.css');
+@import url('../blocks/popup/__title/popup__title.css');
