изменить папку image.поправить grid-cards.бэм

--- a/blocks/grid-card/__del/grid-card__del.css
+++ b/blocks/grid-card/__del/grid-card__del.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 7%;
     right: 0%;
-    background-image: url(../../../image/grid-card__del.svg);
+    background-image: url(../../../images/grid-card__del.svg);
     background-color: transparent;
     width: 18px;
     height: 19px;
