--- a/blocks/grid-card/__like/_active/grid-card__like_active.css
+++ b/blocks/grid-card/__like/_active/grid-card__like_active.css
@@ -1,3 +1,3 @@
 .grid-card__like_active {
-    background-image: url("../../../../image/like_active.svg");
+    background-image: url("../../../../images/like_active.svg");
 }
