--- a/blocks/grid-card/__like/grid-card__like.css
+++ b/blocks/grid-card/__like/grid-card__like.css
@@ -1,5 +1,5 @@
 .grid-card__like {
-    background-image: url("../../../image/like.svg");
+    background-image: url("../../../images/like.svg");
     background-color: transparent;
     width: 21px;
     height: 19px;
