--- a/blocks/grid-card/grid-card.css
+++ b/blocks/grid-card/grid-card.css
@@ -1,10 +1,11 @@
 .grid-card {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  grid-template-columns: repeat(auto-fill, 282px);
   grid-gap: 21px 18px;
   list-style-type: none;
   margin: 0;
   padding: 0;
+  justify-content: center;
 }
 
 @media screen and (max-width: 767px) {
