--- a/blocks/popup/_open/popup_open.css
+++ b/blocks/popup/_open/popup_open.css
@@ -1,11 +1,6 @@
 .popup_open {
     display: flex;
-    opacity: 0;
-    transition: visibility 0s, opacity 0.5s linear;
-}
-
-
-.popup_open:hover {
-    visibility: visible;
     opacity: 1;
+    visibility: visible;
+    transition: opacity 0.4s ease-in-out;
 }
