--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,4 +8,9 @@
     position: fixed;
     top: 0;
     left: 0;
+    display: flex;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.4s ease-in-out, visibility 0.4s;
 }
+
