изменить элем.попапа на модификатор. кнопка закр

--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,4 +1,4 @@
-.form__close-button {
+.popup__close-button {
     width: 41px;
     height: 41px;
     padding: 0;
@@ -14,7 +14,7 @@
 }
 
 
-.form__close-button:hover {
+.popup__close-button:hover {
     opacity: .6;
     cursor: pointer;
     transition: opacity 0.2s linear;
