--- a/style/index.css
+++ b/style/index.css
@@ -13,6 +13,7 @@
 @import url('../blocks/profile/__button-add/profile__button-add.css');
 @import url('../blocks/profile/__button-edit/profile__button-edit.css');
 @import url('../blocks/grid-card/grid-card.css');
+@import url('../blocks/cards-container/cards-container.css');
 @import url("../blocks/grid-card/__item/grid-card__item.css");
 @import url("../blocks/grid-card/__del/grid-card__del.css");
 @import url("../blocks/grid-card/__img/grid-card__img.css");
