--- a/blocks/grid-card/grid-card.css
+++ b/blocks/grid-card/grid-card.css
@@ -1,5 +1,11 @@
 .grid-card {
-    position: relative;
-    background: #FFFFFF;
+    background-color: #FFFFFF;
     border-radius: 10px;
+    max-width: 282px;
+    max-height: 361px;
+    min-width: 220px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
 }
