--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -5,3 +5,13 @@
     background-size: contain;
     border-radius: 50%;
 }
+
+.profile__avatar:hover {
+    background: url("../../../images/avatar_edit.png") center center no-repeat;
+    background-size: 28%;
+    z-index: 1;
+    opacity: 0.8;
+    transition: opacity 0.7s ease 0.1s;
+    cursor: pointer;
+    background-color: #000;
+}
