--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -5,3 +5,14 @@
     background-size: contain;
     border-radius: 50%;
 }
+
+.profile__avatar:hover {
+    background-image: url(/src/images/edit_buton.svg);
+    background-size: 110%;
+    z-index: 1;
+    opacity: 0.8;
+    transition: opacity 0.7s ease 0.1s;
+    cursor: pointer;
+    background-color: #000;
+    
+}
