--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,18 +1,41 @@
 .profile__avatar {
-    width: 120px;
+    position: relative;
     height: 120px;
-    background-position: center;
-    background-size: contain;
+    width: 120px;
     border-radius: 50%;
-}
-
-.profile__avatar:hover {
-    background-image: url(/src/images/edit_buton.svg);
-    background-size: 110%;
+    border: 0;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
+  }
+  
+  .profile__avatar::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
     z-index: 1;
+    background-color: #000;
+    opacity: 0;
+    cursor: pointer;
+    background: url(/src/images/edit_buton.svg) center center no-repeat;
+    background-size: 30%;
+  }
+  
+    /* Оверлей при наведении*/
+  .profile__avatar:hover::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    background-color: #000;
     opacity: 0.8;
     transition: opacity 0.7s ease 0.1s;
-    cursor: pointer;
-    background-color: #000;
-    
-}
+  }
